tests/NormalTests/paczka1/fuzzy1/66087290.err
Error in line 1: S265 S467 43,1
Error in line 4: yGWvjXkq A124 73,42
Error in line 5: yGWvjXkq S467 37,4
Error in line 13: 4bb4 S265 26,0
Error in line 21: SyDl9o A124 98,7
Error in line 16: 4bb4 A124 67,2
Error in line 26: 4bb4 S467 11,9
